--- a/report/report.tex
+++ b/report/report.tex
@@ -176,6 +176,72 @@ The seventh endpoint is '/api/quitGame'. This provides the front-end the ability
 The eigth endpoint is '/api/getGameProfile'. This provides the front-end the ability for users to load game profile for users - themselves and others - which contains their win/loss statistics, previous games, and their game state history. It takes 3 parameters, the session token, the user id making the request, and the username we're looking for - which are all validated. First the token is validated - similar to the other endpoints. Next the games the user with that match the username parameter are loaded. The wins and losses are then calculated. Then the profile object is configured and returned to the front-end. If matches do not exist for a user matching the username parameter, an empty object is returned to the front-end.
 
 \section{Installation Instructions}
+Must be on a macOS Monterrey, version 12.2.1. Must have Homebrew installed. Must have downloaded and installed NodeJs from https://nodejs.org/en/download/.
+\subsection{Start-up Front-End}
+Install angular cli by running 'npm install -g @angular/cli' in the terminal. Next go to the webapp directory, 'cs681Project/apps/webapp' and run the command 'ng serve', this will build and install all the necessary libraries for the front-end. This will start the application on 'https://localhost:4200'.
+\subsubsection{RXJS Dependency - version 6.6.0}
+This dependency is to give the application the ability to display information asynchronously.
+
+\subsection{Start-Up MongoDB} 
+Run 'brew install mongodb' in the Terminal application. Once installation is complete copy 'config/db/mongodb/mongod.conf' to 'usr/local/etc/mongod.conf'. Copy 'config/db/mongodb/ssl/delegate.pem' and 'config/db/mongodb/ssl/mongodb.pem' to '/etc/ssl'. Finally run 'brew services restart mongodb-community@5.0' which will start-up the MongoDB database with the certificates provides and SSL/TLS only connections providing the delegate.pem certificate. Then run 'config/db/mongodb/mongodb\_init.sh' from the 'config/db/mongodb/' directory to initialze the game collection.
+
+\subsection{Start-Up PostGreSQL} 
+Download and install postgres.app from https://postgresapp.com. Once installed copy 'config/db/postgres/ssl/server.crt', 'config/db/postgres/ssl/server.key', and 'apps/iam/ssl/iam.crt' as 'root.crt' to '/Library/PostgreSQL/14/data'. Then copy 'config/db/postgres/postgresql.conf' and 'config/db/postgres/pg\_hba.conf' to '/Library/PostgreSQL/14/data'. Then run 'sudo -u postgres /Library/PostgreSQL/14/bin/pg\_ctl -D /Library/PostgreSQL/14/data restart' in the terminal to start the database. Once the database has started run 'config/db/postgres/postgres\_init.sh' from the 'config/db/postgres' directory.
+
+
+\subsection{Start-Up IAM Service} 
+Run 'npm install' from the 'apps/iam' directory. Once the dependencies have installed you can start the service with 'node app.js' from the 'apps/iam' directory.
+
+\subsubsection{Bcrypt Dependency - version 2.4.3}
+Github: https://github.com/dcodeIO/bcrypt.js\\
+This library provides a bcrypt implementation with zero dependencies.
+
+\subsubsection{CORS Dependency - version 2.8.5}
+Github: https://github.com/expressjs/cors\\
+A middleware library that can be used with Express to enable CORS for the service.
+
+\subsubsection{Express Dependency - version 4.17.3}
+Github: https://github.com/expressjs/express\\
+A framework that eases endpoint registration and configuration - built on top of built in HTTPS and TLS libraries.
+
+\subsubsection{JSONWebToken Dependency - version 8.5.1}
+Github: https://github.com/auth0/node-jsonwebtoken\\
+A library to create JSON web tokens for a web-application.
+
+\subsubsection{Node-Postgres Dependency - version 8.7.3}
+Github: https://github.com/brianc/node-postgres\\
+A PostgreSQL client library.
+
+\subsubsection{Snyk Dependency - version 1.913.0}
+Github: https://github.com/snyk/cli\\
+Scans projects and depenecies for security vulnerabilities.
+
+\subsection{Start-Up Delegate Service}
+Run 'npm install' from the 'apps/delegate' directory. Once the dependencies have installed you can start the service with 'node app.js' from the 'apps/delegate' directory.
+
+\subsubsection{MongoDB Dependency - version 4.4.0}
+Github: https://github.com/mongodb/node-mongodb-native\\
+A MongoDB driver for NodeJs servers.
+
+\subsubsection{Chess.JS Dependency - version 0.12.1}
+Github: https://github.com/jhlywa/chess.js\\
+A library to validate chess moves.
+
+\subsubsection{CORS Dependency - version 2.8.5}
+Github: https://github.com/expressjs/cors\\
+A middleware library that can be used with Express to enable CORS for the service.
+
+\subsubsection{Express Dependency - version 4.17.3}
+Github: https://github.com/expressjs/express\\
+A framework that eases endpoint registration and configuration - built on top of built in HTTPS and TLS libraries.
+
+\subsubsection{JSONWebToken Dependency - version 8.5.1}
+Github: https://github.com/auth0/node-jsonwebtoken\\
+A library to create JSON web tokens for a web-application.
+
+\subsubsection{Snyk Dependency - version 1.913.0}
+Github: https://github.com/snyk/cli\\
+Scans projects and depenecies for security vulnerabilities.
 
 \section{Operation Instructions}
 
@@ -184,7 +250,6 @@ Referencing: https://www.chess.com/learn-how-to-play-chess.\\\\
 This is a board game on a 8x8 board. The pieces start off with pieces on the first and second row. The first row starts off configured with the rook as the first piece of the row, then the knight, then the bishop, then the king, then the queen, then bishop, knight, and rook - completing the first row. Then the second row is full of pawns. The last 2 rows will mirror the first two rows. The goal of the game is to capture the other player's king - capturing is done by moving one's piece onto the same position as the king without another piece intervening nor the king moving from its position.
 
 Each of the these different pieces have their own move patterns. The king is able to move left, right, up, down exactly one space. The king has a special case in which it must be moved or protected when it is in check - indicating the king can be removed by another piece. The queen is able to move however many positions across the board diagonally, up, down, left, or right as long as it does not jump over pieces. The rook can only move up, down, left, or right as many postitions as long as it does not jump over pieces. The knight may only move to positions that are 2 positions left/right and 3 positions up/down or 2 positions up/down and 3 positions left/right away from its current positions. The bishop may only move diagonally and only on positions that have the same color as the one it started on - guaranteed by the diagonal only move constraint - and it cannot jump over other pieces. Finally the pawn may move forward 2 positions on its first move if it does not jump over other pieces. Otherwise it may only move 1 poisition forward and has the ability to move diagonally forward 1 position only if it is removing another piece.
-
 
 \section{Why is it secure?}
 
