--- a/report/report.tex
+++ b/report/report.tex
@@ -246,7 +246,7 @@ A library to create JSON web tokens for a web-application.
 \subsubsection{Snyk Dependency - version 1.913.0}
 Github: https://github.com/snyk/cli\\
 Scans projects and depenecies for security vulnerabilities.
-
+\newpage
 \section{Operation Instructions}
 \subsubsection{Login Page}
 When the website is first visited by a user they will see the login screen which'll prompt them to 
@@ -264,7 +264,7 @@ create account page. The users are prompted to enter a username and password for
     \includegraphics[width=\linewidth]{CREATE_ACCOUNT.png}
     \caption{Create Account Page}
 \end{figure}
-
+\newpage
 \subsubsection{Home Page}
 Once the user signs in they will see the home page. Where they will have the option to see their profile, find a new game, create a new game, find a user, or logout. If the user does not move their mouse throughout the app they will be signed out.
 \begin{figure}[h!]
@@ -278,7 +278,7 @@ This page displays the games the player has played with the option to see the ga
     \includegraphics[width=\linewidth]{OTHER_PLAYER_PROFILE.png}
     \caption{Profile Page}
 \end{figure}
-
+\newpage
 \subsubsection{Game History Page}
 This page shows what pieces where in ascending move order for a game.
 \begin{figure}[h!]
@@ -292,7 +292,7 @@ When the user clicks the 'Find User' link on the top bar they are redirected to 
     \includegraphics[width=\linewidth]{SEARCH_FOR_USER.png}
     \caption{Find User Page}
 \end{figure}
-
+\newpage
 \subsubsection{Find Game Page}
 When the user clicks the 'Find Game' link on the top bar they are redirected to this page to search for games waiting for users to join.
 \begin{figure}[h!]
@@ -320,11 +320,11 @@ When a user joins a game and is going to make a move.
     \includegraphics[width=\linewidth]{MAKING_MOVE.png}
     \caption{Find Game Page}
 \end{figure}
-
+\newpage
 \subsubsection{End of Game Page}
 When a user joins a game and a player quits/wins this page is displayed with the game state.
-\begin{figure}[h!]
-    \includegraphics[width=\linewidth]{PLAYER_WON_PLAYER_QUIT.png}
+\begin{figure}[!hb]
+    \includegraphics[width=\linewidth,scale=0.5]{PLAYER_WON_PLAYER_QUIT.png}
     \caption{Find Game Page}
 \end{figure}
 
