final final changes

--- a/report/report.tex
+++ b/report/report.tex
@@ -342,6 +342,6 @@ This is a board game on a 8x8 board. The pieces start off with pieces on the fir
 Each of the these different pieces have their own move patterns. The king is able to move left, right, up, down exactly one space. The king has a special case in which it must be moved or protected when it is in check - indicating the king can be removed by another piece. The queen is able to move however many positions across the board diagonally, up, down, left, or right as long as it does not jump over pieces. The rook can only move up, down, left, or right as many postitions as long as it does not jump over pieces. The knight may only move to positions that are 2 positions left/right and 3 positions up/down or 2 positions up/down and 3 positions left/right away from its current positions. The bishop may only move diagonally and only on positions that have the same color as the one it started on - guaranteed by the diagonal only move constraint - and it cannot jump over other pieces. Finally the pawn may move forward 2 positions on its first move if it does not jump over other pieces. Otherwise it may only move 1 poisition forward and has the ability to move diagonally forward 1 position only if it is removing another piece.
 
 \section{Why is it secure?}
-The AssuranceCase.pdf file in report/ contains the assurance case and arguments as to why this system is secure.
+The AssuranceCase.pdf file in report/ contains the assurance case and arguments as to why this system is secure. The OWASP ZAP reports and screenshots are in the ZAP folder as evidence for the assurance case.
 
 \end{document}
